--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ cache:
 services:
  develop
   - mysql
-before_install:
-  - mysql -e 'CREATE DATABASE users_db;'
+# before_install:
+#   - mysql -e 'CREATE DATABASE users_db;'
